syntax = "proto3";

package model;

import "github.com/da-moon/protoc-gen-hcplugin/proto/types.proto";
import "github.com/da-moon/protoc-gen-hcplugin/internal/helper/utils/proto/utils.proto" ;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option (gogoproto.marshaler_all) = false;
option (gogoproto.sizer_all) = false;
option (gogoproto.unmarshaler_all) = false;
message Package {
    string package_name = 1;
    string package_path = 2;
}
message Input {
    string field_name = 1; 
    string field_value = 2; 
}
message Base {
    string package = 1; 
    map<string,Package> imports = 2 [(gogoproto.nullable) = false]; 
    repeated Service services = 3 [(gogoproto.nullable) = false]; 
    // repeated string plugin_map = 4 [(gogoproto.nullable) = false]; 
}
message Service {
    String service_name = 1 [(gogoproto.nullable) = false]; 
    repeated Method methods = 2 [(gogoproto.nullable) = false] ; 
    // Handshake handshake = 3 [(gogoproto.nullable) = false] ; 
    // CMD cmd = 4 [(gogoproto.nullable) = false] ;
}
message Method {
    // MethodSignature method_signature = 1;
    // string request_getter = 3;
    // string response_getter = 4;
    // string request_setter = 5;
    // string response_setter = 6;
    string input_type = 1; 
    string output_type = 2; 
    String name = 3 [(gogoproto.nullable) = false] ; 
    repeated Field input_fields = 4 [(gogoproto.nullable) = false]  ; 
    repeated Field output_fields = 5 [(gogoproto.nullable) = false]; 
    // String service_name = 1 [(gogoproto.nullable) = false] ; 
    // CMD cmd = 5 [(gogoproto.nullable) = false] ;
}

message MethodSignature{
    string expanded = 1;
    string expanded_with_err = 2;
    string proto = 3;
    string proto_with_err = 4;
}
message Field { 
    // key -> prefix (* , & ) value -> Name
    KV variable_name = 1 [(gogoproto.nullable) = false]; 
    // key -> package (* , & ) value -> Type
    KV variable_type = 2 [(gogoproto.nullable) = false]; 
    // key -> import name (* , & ) value -> import path
    KV package = 3 [(gogoproto.nullable) = false]; 
    // gogo field options
    GoGoFieldOptions go_go_field_options = 4;
}
message GoGoFieldOptions {
    string custom_name = 1;
    string enum_custom_name = 2;
    string custom_type = 3;
    bool std_time = 4[(gogoproto.customname) = "STDTime"];
    bool std_duration = 5[(gogoproto.customname) = "STDDuration"];
    bool nullable = 6;   
}

